# ey-cohort-12

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline_empty.py  461a0e5c3080_kb_tables_wo25.py  a7c3f8e2d901_kb_search_vector_wo27.py
backend/app/: __init__.py  limiter.py  main.py
backend/app/api/: errors.py  router.py  schema.py
backend/app/api/v1/: common.py  health.py  integrations.py  kb.py  kb_schemas.py  router.py
backend/app/auth/: deps.py  jwt.py  kb_roles.py  models.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  kb_article.py  kb_article_feedback.py  ticket_category.py  user.py
backend/app/integrations/: integration_deps.py  redis_client.py  secrets.py  service_bus.py
backend/app/kb/: search_service.py  users.py
backend/app/middleware/: request_id.py
backend/app/websocket/: hub.py  routes.py
backend/scripts/: dump_sqlite_schema.py  seed_kb_demo.py
backend/tests/: conftest.py  test_health.py  test_kb_search.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/: auth.interceptor.ts  auth.service.ts  kb-api.service.ts  kb-editor.guard.ts
frontend/src/app/kb/: kb.models.ts
frontend/src/app/kb/kb-editor/: kb-editor.component.html  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.ts
(+9 files in other folders)
