[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ey-cohort-12-backend"
version = "0.1.0"
description = "EY Cohort 12 — backend API (WO-2 scaffolding)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.9.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "redis[hiredis]>=5.2.0",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-servicebus>=7.14.0",
    "psycopg[binary]>=3.2.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
